version '1.0'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 1.8

mainClassName = "App"

repositories {
    mavenCentral()
    jcenter()
}

dependencies {
    compile 'com.eclipsesource.minimal-json:minimal-json:0.9.5'
    compile 'com.jfoenix:jfoenix:8.0.1'
    compile 'org.jsoup:jsoup:1.8.3'
    compile 'com.squareup.moshi:moshi:1.5.0'
    compile 'com.squareup.moshi:moshi-adapters:1.5.0'
}
